<resources>
    <string name="app_name">Propery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notify_detail">NotifyDetailActivity</string>

    <string name="waiting">正在加载中...</string>
    <string name="warning">提示</string>
    <string name="confirm">确定</string>

    <string name="imageloader_loading">正在加载...</string>
    <string name="imageloader_extrnal_storage_not_exist">暂无外部存储</string>
    <string name="imageloader_alert_user_allow_access_extrnal_storage">获取本地图片需授予权限</string>
    <string name="imageloader_image_not_found">图片文件不存在</string>
    <string name="login_mobil_empty">手机号不能为空!</string>
    <string name="login_mobile_error">手机号输入有误!</string>
    <string name="login_message_error">验证码不能为空!</string>
    <string name="get_msg_code_again_time"> 重新发送(%1ss) </string>
    <string name="get_msg_code_again">重新获取</string>
    <string name="login_password_empty">请输入密码!</string>
    <string name="login_sdpassword_empty">请再次输入密码!</string>
    <string name="login_fspassword">两次密码不一致!</string>
    <string name="forget_setting_psd">设置密码</string>
    <string name="forget_sure_psd">确认密码</string>
    <string name="message_tip">请输入短信验证码</string>
    <string name="message_mobile">请输入手机号</string>
    <string name="message_code">发送验证码</string>
    <string name="psd_length">密码长度在6-25之间!</string>
    <string name="psd__sure_length">确认密码长度在6-25之间!</string>
    <string name="next">下一步</string>
    <string name="sure">确定</string>
    <string name="nick_hint">请输入昵称</string>
    <string name="nick_tip">昵称不能为空!</string>
    <!--上传图片-->
    <string name="check_sd_card">请插入SD卡</string>
    <string name="add_photo_dialog_title">图片</string>
    <string name="add_photo_dialog_take">拍照</string>
    <string name="add_photo_dialog_select">从手机相册中选择</string>
    <string name="tip_sure">确定</string>
    <string name="tip_cancel">取消</string>
    <string name="follow_tip">确定不再关注这位小宝宝了吗？</string>
    <string name="join_follow">&#043;&#160;关注</string>
    <string name="exit_login">退出登录</string>
    <string name="nickname_empty">你还没有昵称</string>
    <string name="my_follow">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_circle">我的圈子</string>
    <string name="my_member">成员列表</string>
    <string name="my_userinfo">个人资料</string>
    <string name="modify_nickname_empty">请填写昵称</string>
    <string name="modify_nickname_length">昵称不能超过10个字</string>
    <string name="common_no_network">网络错误或服务器故障，请稍后再试!</string>
    <string name="upload_img_success">头像上传成功</string>
    <string name="upload_img_failed">头像上传失败</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_password_old">原密码</string>
    <string name="modify_password_new">输入新密码</string>
    <string name="modify_password_renew">再次输入密码</string>
    <string name="modify_sure">确认修改</string>
    <string name="modify_old_psw_empty">原密码不能为空</string>
    <string name="modify_psw_length">密码长度在6-25之间</string>
    <string name="modify_psw_newEmpty">新密码不能为空</string>
    <string name="modify_psw_newOld">两次密码不相同</string>
    <string name="modify_psw_success">密码修改成功</string>
    <string name="modify_psw_failed">密码修改失败</string>
    <string name="exit_login_tip">确定要退出登录?</string>
    <string name="tip">提示</string>
    <string name="email_hint">请输入公司名称</string>
    <string name="email_tip">公司不能为空</string>
    <string name="email_error">邮箱格式不正确</string>
    <string name="register_title">注册</string>
    <string name="upload_usericon_success">头像上传成功</string>
    <string name="upload_usericon_failed">头像上传成功</string>
    <string name="upload_cover_success">封面上传成功</string>
    <string name="upload_cover_failed">封面上传失败</string>
    <string name="title_activity_home_send">HomeSendActivity</string>
    <string name="haved_follow_user">已关注人</string>
    <string name="haved_follow_circle">已关注圈子</string>
    <string name="forbid_success">禁言成功</string>
    <string name="forbid_failed">禁言失败</string>
    <string name="relieve_success">解除禁言成功</string>
    <string name="relieve_failed">解除禁言失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="login">登录</string>
    <string name="register">还没有账号?快来注册一个</string>
    <string name="forget_psd">忘记密码</string>
    <string name="back_key">返回</string>
</resources>
