<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/follow_tip"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/dialog_exit"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@drawable/cancel_btn_select" />

            <Button
                android:id="@+id/dialog_cancle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/cancel_btn_select"
                android:text="@string/tip_cancel"
                android:textColor="@color/cff203a"
                android:textSize="@dimen/sp_14" />

            <Button
                android:id="@+id/dialog_sure"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/confirm_btn_select"
                android:text="@string/tip_sure"
                android:textColor="@color/cff203a"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>