<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_dialog_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/setting_text_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="20dp"
                android:textColor="@color/red"
                android:text="@string/add_photo_dialog_title"
                android:textSize="18sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="getPicFromCamera"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/add_photo_dialog_take"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e9e9e9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="getPicForCert"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/add_photo_dialog_select"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>