<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cebebeb">
    <android.support.v7.widget.Toolbar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_black">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_56"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:orientation="vertical">
        <EditText
            style="@style/s40404014"
            android:id="@+id/modify_password_old"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_64"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="textPassword"
            android:background="@color/transparent"
            android:textColorHint="@color/ccccccc"
            android:hint="@string/modify_password_old"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/number_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ccccccc"
            android:visibility="visible"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_64"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/modify_password_first"
                style="@style/s40404014"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_64"
                android:background="@color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/modify_password_new"
                android:inputType="textPassword"
                android:textColorHint="@color/ccccccc" />
        </LinearLayout>
        <TextView
            android:id="@+id/number_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ccccccc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            >
            <EditText
                style="@style/s40404014"
                android:id="@+id/modify_password_second"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_64"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@color/transparent"
                android:textColorHint="@color/ccccccc"
                android:inputType="textPassword"
                android:hint="@string/modify_password_renew"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/number_line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ccccccc"/>
        <Button
            style="@style/sfff15"
            android:id="@+id/modify_login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/blue_btn_border"
            android:text="@string/modify_sure"/>
    </LinearLayout>
</RelativeLayout>