<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cebebeb">
    <LinearLayout
        android:id="@+id/forget_second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">
        <EditText
            android:id="@+id/forget_second_psd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_setting_psd"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/c4343434"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">
        <EditText
            android:id="@+id/forget_second_rePsd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_sure_psd"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/c4343434"
            />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_second_layout"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">
        <Button
            android:id="@+id/forget_second_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:background="@drawable/grey_bg_with_corner"
            android:enabled="false"
            />
    </LinearLayout>
</RelativeLayout>