<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cebebeb">
    <LinearLayout
        android:id="@+id/register_second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="50dp">
            <EditText
                android:id="@+id/register_nice_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nick_hint"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="@color/c4343434"
                android:maxLength="8"
                android:textSize="18sp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/register_company_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="@color/c4343434"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/register_second_psd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_setting_psd"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/c4343434"
            android:textSize="18sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/register_second_rePsd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_sure_psd"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/c4343434"
            android:textSize="18sp"
            />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_second_layout"
        android:layout_marginTop="54dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">
        <Button
            android:id="@+id/register_second_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="确定"
            android:background="@drawable/blue_btn_border"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>