<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">
            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/header"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/my_fans" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/user_default"
                    android:contentDescription="@string/my_fans"/>

                <TextView
                    android:id="@+id/user_nickName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_icon"
                    android:layout_marginTop="@dimen/dp_16"
                    android:gravity="center_horizontal"
                    android:text="@string/nickname_empty" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:weightSum="3.8">

                        <TextView
                            android:id="@+id/myFollow_txt"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_weight="1.9"
                            android:background="@drawable/layout_border_right"
                            android:gravity="center|center_vertical"
                            android:text="@string/my_follow"
                            android:textColor="@color/c4343434" />

                        <TextView
                            android:id="@+id/myFans_txt"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_weight="1.9"
                            android:gravity="center|center_horizontal"
                            android:text="@string/my_fans"
                            android:textColor="@color/c4343434" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/profile_modify_profile"
                style="@style/Widget.CardContent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/shape_corner">

                <include
                    android:id="@+id/me_modify_layout"
                    layout="@layout/activity_me_modify" />
            </LinearLayout>

            <LinearLayout
                style="@style/Widget.CardContent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/shape_corner">

                <include
                    android:id="@+id/me_attention_layout"
                    layout="@layout/activity_me_attention" />

                <include
                    android:id="@+id/me_fans_layout"
                    layout="@layout/activity_me_fans" />

                <include
                    android:id="@+id/me_order_layout"
                    layout="@layout/activity_me_order" />
                <include
                    android:id="@+id/me_circle_layout"
                    layout="@layout/activity_me_circle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Widget.CardContent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/shape_corner">

                <include
                    android:id="@+id/me_setting_layout"
                    layout="@layout/activity_me_setting" />
            </LinearLayout>

            <LinearLayout
                style="@style/Widget.CardContent1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginTop="20dp"
                android:background="@color/white">
                <Button
                    android:id="@+id/exit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center|center_vertical"
                    android:text="@string/exit_login"
                    android:textColor="@color/ce44848"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
